--- a/static/css/main.css
+++ b/static/css/main.css
@@ -90,8 +90,10 @@
 .client-body .usermain-subtitle{position:relative;float:left;width:100%;font-size:6vw;font-weight:900;color:#fff}
 .client-body .usermain-fun-entrence-bttom{position:absolute;left:0;bottom:0;width:100%;height:auto;padding:10vw}
 .client-body .msg-btn{position:fixed;right:5vw;top:5vw;border-radius:50%;box-shadow:0 1vw 10vw -2vw rgba(0,0,0,.4);height:15vw;width:15vw;z-index:3;cursor:pointer;text-align:center}
+.client-body .log-btn{position:fixed;right:5vw;top:27vw;border-radius:50%;box-shadow:0 1vw 10vw -2vw rgba(0,0,0,.4);height:15vw;width:15vw;z-index:3;cursor:pointer;text-align:center}
 .client-body .msg-btn .msg-new-number{position:absolute;right:0;top:0;border-radius:50%;height:10vw;width:10vw;line-height:10vw;font-weight:400;font-size:6vw;transform:scale(.5);transform-origin:100% 0;color:#fff;background-color:#dc143c}
 .client-body .msg-btn i{font-size:7vw;line-height:15vw;color:#b3b3b3}
+.client-body .log-btn i{font-size:7vw;line-height:15vw;color:#b3b3b3}
 .client-body .backtoUsermain{position:relative;float:left;width:10vw;height:11vw;line-height:11vw;margin-left:-4vw;margin-right:4vw;text-align:center}
 .client-body .backtoUsermain i{font-size:13vw;color:#b3b3b3}
 .client-body .backtoUsermain-right{position:relative;float:left;width:calc(100% - 10vw);height:11vw}
@@ -200,3 +202,40 @@
 .client-body .user-dead-page{position:relative;float:left;width:100%;height:100%;overflow-y:auto;overflow-x:hidden;padding:8vw;background-size:cover}
 .client-body .ongoing{position:absolute;display:block;left:0;top:0;width:100vw;height:100vh;z-index:1000;background-color:#fff}
 .client-body .fake .text-fake{font-family:SimSun!important}
+.client-body .user-endpage-page{
+	position:relative;
+	float:left;
+	width:100%;
+	height:100%;
+	overflow-x:hidden;
+	overflow-x:hidden;
+	padding:8vw;
+}
+.client-body .user-endpage-content {
+	height: auto;
+	width: 100%;
+	text-align: center;
+}
+.client-body .user-endpage-content .score-title {
+	font-size: 6vw;
+	font-weight: 900;
+}
+.client-body .user-endpage-content .score-content {
+	font-size: 12vw;
+	font-weight: 900;
+	margin-bottom: 4vh;
+}
+.client-body .user-endpage-content .score-text {
+	font-size: 4vw;
+	font-weight: 400;
+	line-height: 4.3vh;
+}
+.client-body .user-endpage-content .score-text-line {
+	width: 10%;
+	margin-left: 45%;
+	height: 2px;
+	background-color: black;
+	margin-top: 2vw;
+	margin-bottom: 2vw;
+}
+
